* configure.in docs/examples/*: starting to add examples. the XSLT   still need to be fixed for web site Daniel

--- a/configure.in
+++ b/configure.in
@@ -191,4 +191,5 @@ fi
 rm -f COPYING
 
 AC_OUTPUT(Makefile src/Makefile include/Makefile docs/Makefile \
+          docs/examples/Makefile \
           libvir.pc libvir.spec include/libvir.h python/Makefile)
