--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-SUBDIRS=
+SUBDIRS=examples
 
 # The directory containing the source code (if it contains documentation).
 DOC_SOURCE_DIR=../src
@@ -8,7 +8,7 @@ PAGES= index.html bugs.html FAQ.html
 APIPAGES=APIconstructors.html APIfiles.html APIfunctions.html \
     APIsymbols.html APIchunk0.html
 EXTRA_DIST=							\
-	   libvir-api.xml libxen-refs.xml apibuild.py		\
+	   libvirt-api.xml libvirt-refs.xml apibuild.py		\
 	   *.xsl *.html *.gif html/*.html html/*.png
 
 
@@ -16,7 +16,7 @@ man_MANS=
 
 all: web $(top_builddir)/NEWS $(man_MANS)
 
-api: libvir-api.xml libvir-refs.xml $(APIPAGES) $(srcdir)/html/index.html
+api: libvirt-api.xml libvirt-refs.xml $(APIPAGES) $(srcdir)/html/index.html
 
 web: $(PAGES)
 
@@ -29,24 +29,24 @@ $(PAGES): libvir.html site.xsl
 	  $(XMLLINT) --nonet --valid --noout $(PAGES) ; fi );
 
 
-$(APIPAGES): libvir-api.xml libvir-refs.xml $(top_srcdir)/docs/site.xsl $(top_srcdir)/docs/api.xsl
+$(APIPAGES): libvirt-api.xml libvirt-refs.xml $(top_srcdir)/docs/site.xsl $(top_srcdir)/docs/api.xsl
 	-@(if [ -x $(XSLTPROC) ] ; then \
-	  echo "Rebuilding the HTML API pages from libvir-refs.xml" ; \
+	  echo "Rebuilding the HTML API pages from libvirt-refs.xml" ; \
 	  $(XSLTPROC) --nonet --html $(top_srcdir)/docs/api.xsl \
 	                     $(top_srcdir)/docs/libvir.html ; fi );
 	-@(if [ -x $(XMLLINT) ] ; then \
 	  echo "Validating the HTML API pages" ; \
 	  $(XMLLINT) --nonet --valid --noout API*.html ; fi );
 
-$(srcdir)/html/index.html: libvir-api.xml $(srcdir)/newapi.xsl
+$(srcdir)/html/index.html: libvirt-api.xml $(srcdir)/newapi.xsl
 	-@(if [ -x $(XSLTPROC) ] ; then \
 	  echo "Rebuilding the HTML pages from the XML API" ; \
-	  $(XSLTPROC) --nonet $(srcdir)/newapi.xsl libvir-api.xml ; fi )
+	  $(XSLTPROC) --nonet $(srcdir)/newapi.xsl libvirt-api.xml ; fi )
 	-@(if [ -x $(XMLLINT) ] ; then \
 	  echo "Validating the resulting XHTML pages" ; \
 	  $(XMLLINT) --nonet --valid --noout html/*.html ; fi );
 
-libvir-api.xml libvir-refs.xml: apibuild.py ../include/*.h ../src/*.h ../src/*.c
+libvirt-api.xml libvirt-refs.xml: apibuild.py ../include/*.h ../src/*.h ../src/*.c
 	-(./apibuild.py)
 
 $(top_builddir)/NEWS: $(top_srcdir)/docs/news.xsl $(top_srcdir)/docs/news.html
@@ -57,7 +57,7 @@ clean-local:
 	rm -f *~ *.bak *.hierarchy *.signals *-unused.txt
 
 maintainer-clean-local: clean-local
-	rm -rf libvir-api.xml libvir-refs.xml
+	rm -rf libvirt-api.xml libvirt-refs.xml
 
 rebuild: api all
 
