--- a/python/Makefile.am
+++ b/python/Makefile.am
@@ -1,4 +1,4 @@
-# Makefile for libvir python library
+# Makefile for libvirt python library
 
 INCLUDES = \
         -I$(PYTHON_INCLUDES) \
@@ -6,7 +6,7 @@ INCLUDES = \
 	-I$(top_builddir)/include \
 	-I$(top_builddir)/$(subdir)
 
-DOCS_DIR = $(datadir)/doc/libvir-python-$(LIBVIR_VERSION)
+DOCS_DIR = $(datadir)/doc/libvirt-python-$(LIBVIR_VERSION)
 
 DOCS = ${srcdir}/TODO
 
@@ -14,40 +14,40 @@ EXTRA_DIST =		\
 	libvir.c	\
 	types.c		\
 	generator.py	\
-	libvir_wrap.h	\
-	libvir.py	\
-	libvir-python-api.xml \
+	libvirt_wrap.h	\
+	libvirt.py	\
+	libvirt-python-api.xml \
 	$(DOCS)
 
-libvirmod_la_LDFLAGS = -module -avoid-version -L$(top_builddir)/src/.libs
+libvirtmod_la_LDFLAGS = -module -avoid-version -L$(top_builddir)/src/.libs
 
 if WITH_PYTHON
-mylibs = $(top_builddir)/src/libvir.la
+mylibs = $(top_builddir)/src/libvirt.la
 
-all-local: libvir.py
+all-local: libvirt.py
 
-python_LTLIBRARIES = libvirmod.la
+python_LTLIBRARIES = libvirtmod.la
 
-libvirmod_la_SOURCES = libvir.c types.c libvir-py.c
-libvirmod_la_LIBADD = $(mylibs) 
+libvirtmod_la_SOURCES = libvir.c types.c libvirt-py.c libvirt-py.h
+libvirtmod_la_LIBADD = $(mylibs) 
 
 
 install-data-local:
 	$(mkinstalldirs) $(DESTDIR)$(pythondir)
-	@INSTALL@ -m 0644 libvir.py $(DESTDIR)$(pythondir)
+	@INSTALL@ -m 0644 libvirt.py $(DESTDIR)$(pythondir)
 	$(mkinstalldirs) $(DESTDIR)$(DOCS_DIR)
 	@(for doc in $(DOCS) ; \
 	   do @INSTALL@ -m 0644 $$doc $(DESTDIR)$(DOCS_DIR) ; done)
 
 GENERATE = generator.py
-API_DESC = $(top_srcdir)/docs/libvir-api.xml $(srcdir)/libvir-python-api.xml
-GENERATED= libvir.py \
-           libvir-export.c \
-           libvirclass.txt \
-	   libvir-py.c \
-	   libvir-py.h
+API_DESC = $(top_srcdir)/docs/libvirt-api.xml $(srcdir)/libvirt-python-api.xml
+GENERATED= libvirt.py \
+           libvirt-export.c \
+           libvirtclass.txt \
+	   libvirt-py.c \
+	   libvirt-py.h
 
-CLEANFILES= $(GENERATED) gen_prog libvir.py
+CLEANFILES= $(GENERATED) gen_prog libvirt.py
 
 $(GENERATED): gen_prog
 
@@ -55,7 +55,7 @@ gen_prog: $(srcdir)/$(GENERATE) $(API_DESC)
 	$(PYTHON) $(srcdir)/$(GENERATE) $(srcdir)
 	touch gen_prog
 
-$(libvirmod_la_OBJECTS): $(GENERATED)
+$(libvirtmod_la_OBJECTS): $(GENERATED)
 
 else
 all: 
