--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,18 +1,18 @@
 ## Process this file with automake to produce Makefile.in
 
 INCLUDES = -I$(top_builddir)/include -I@srcdir@/include
-DEPS = libvir.la
-LDADDS = @STATIC_BINARIES@ libvir.la
+DEPS = libvirt.la
+LDADDS = @STATIC_BINARIES@ libvirt.la
 VIRSH_LIBS = @VIRSH_LIBS@
 
-EXTRA_DIST = libvir_sym.version
+EXTRA_DIST = libvirt_sym.version
 
-lib_LTLIBRARIES = libvir.la
-libvir_la_LIBADD = 
-libvir_la_LDFLAGS = -Wl,--version-script=$(srcdir)/libvir_sym.version \
+lib_LTLIBRARIES = libvirt.la
+libvirt_la_LIBADD = 
+libvirt_la_LDFLAGS = -Wl,--version-script=$(srcdir)/libvirt_sym.version \
                     -version-info @LIBVIR_VERSION_INFO@
-libvir_la_SOURCES =						\
-		libvir.c internal.h				\
+libvirt_la_SOURCES =						\
+		libvirt.c internal.h				\
 		hash.c hash.h					\
 		xml.c						\
 		xen_internal.c xen_internal.h			\
