--- a/include/libvirt/libvirt.h.in
+++ b/include/libvirt/libvirt.h.in
@@ -1,10 +1,10 @@
 /*
- * libvir.h:
- * Summary: core interfaces for the libvir library
- * Description: Provides the interfaces of the libvir library to handle
+ * libvirt.h:
+ * Summary: core interfaces for the libvirt library
+ * Description: Provides the interfaces of the libvirt library to handle
  *              Xen domains from a process running in domain 0
  *
- * Copy:  Copyright (C) 2005 Red Hat, Inc.
+ * Copy:  Copyright (C) 2005,2006 Red Hat, Inc.
  *
  * See COPYING.LIB for the License of this software
  *
@@ -167,7 +167,7 @@ typedef enum {
  * version * 1,000,000 + minor * 1000 + micro
  */
 
-#define LIBVIR_VERSION_NUMBER 2
+#define LIBVIR_VERSION_NUMBER @LIBVIR_VERSION_NUMBER@
 
 int			virGetVersion		(unsigned long *libVer,
 						 const char *type,
