* README TODO config.h.in libvirt.pc.in: more cleanups. Daniel

--- a/config.h.in
+++ b/config.h.in
@@ -48,7 +48,7 @@
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
 
-/* Define if compiler has function prototypes */
+/* Define to 1 if the C compiler supports function prototypes. */
 #undef PROTOTYPES
 
 /* Define to 1 if you have the ANSI C header files. */
@@ -56,3 +56,6 @@
 
 /* Version number of package */
 #undef VERSION
+
+/* Define like PROTOTYPES; this can be used by system headers. */
+#undef __PROTOTYPES
