* NEWS configure.in docs/libvir.html docs/news.html include/libvirt.h   libvirt.spec.in: preparing 0.0.4 release Daniel

--- a/configure.in
+++ b/configure.in
@@ -5,7 +5,7 @@ AC_CANONICAL_HOST
 
 LIBVIR_MAJOR_VERSION=0
 LIBVIR_MINOR_VERSION=0
-LIBVIR_MICRO_VERSION=3
+LIBVIR_MICRO_VERSION=4
 LIBVIR_MICRO_VERSION_SUFFIX=
 LIBVIR_VERSION=$LIBVIR_MAJOR_VERSION.$LIBVIR_MINOR_VERSION.$LIBVIR_MICRO_VERSION$LIBVIR_MICRO_VERSION_SUFFIX
 LIBVIR_VERSION_INFO=`expr $LIBVIR_MAJOR_VERSION + $LIBVIR_MINOR_VERSION`:$LIBVIR_MICRO_VERSION:$LIBVIR_MINOR_VERSION
@@ -64,7 +64,7 @@ AC_SUBST(HTML_DIR)
 dnl
 dnl specific tests to setup DV devel environments with debug etc ...
 dnl
-if [[ "${LOGNAME}" = "veillard" -a "`pwd`" = "/u/veillard/libvir" ]] ; then
+if [[ "${LOGNAME}" = "veillard" -a "`pwd`" = "/u/veillard/libvirt" ]] ; then
     STATIC_BINARIES="-static"
 else
     STATIC_BINARIES=
