* libvirt.pc.in: Karel pointed out the name hadn't been updated Daniel

--- a/libvirt.pc.in
+++ b/libvirt.pc.in
@@ -3,7 +3,7 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
-Name: libvir
+Name: libvirt
 Version: @VERSION@
 Description: libvirt library
 Requires:
