* Makefile.am configure.in python/Makefile.am python/tests/Makefile.am   python/tests/basic.py: added first python test script and   a 'make tests' target Daniel

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,3 +11,10 @@ pkgconfig_DATA = libvirt.pc
 
 rpm: clean
 	@(unset CDPATH ; $(MAKE) dist && rpmbuild -ta $(distdir).tar.gz)
+
+check-local: all tests
+
+tests:
+	@(if [ "@PYTHON_SUBDIR@" != "" ] ; then cd python ; \
+	  $(MAKE) MAKEFLAGS+=--silent tests ; fi)
+	
