--- a/configure.in
+++ b/configure.in
@@ -193,4 +193,5 @@ cp COPYING.LIB COPYING
 
 AC_OUTPUT(Makefile src/Makefile include/Makefile docs/Makefile \
           docs/examples/Makefile \
-          libvirt.pc libvirt.spec include/libvirt.h python/Makefile)
+          libvirt.pc libvirt.spec include/libvirt.h \
+	  python/Makefile python/tests/Makefile)
