* configure.in libvirt.spec.in include/libvirt.h.in python/Makefile.am   src/Makefile.am: fix rpm packaging problems whith head, more   LIBVIR -> LIBVIRT changes. Daniel

--- a/configure.in
+++ b/configure.in
@@ -3,33 +3,33 @@ AC_INIT(src/libvirt.c)
 AM_CONFIG_HEADER(config.h)
 AC_CANONICAL_HOST
 
-LIBVIR_MAJOR_VERSION=0
-LIBVIR_MINOR_VERSION=0
-LIBVIR_MICRO_VERSION=4
-LIBVIR_MICRO_VERSION_SUFFIX=
-LIBVIR_VERSION=$LIBVIR_MAJOR_VERSION.$LIBVIR_MINOR_VERSION.$LIBVIR_MICRO_VERSION$LIBVIR_MICRO_VERSION_SUFFIX
-LIBVIR_VERSION_INFO=`expr $LIBVIR_MAJOR_VERSION + $LIBVIR_MINOR_VERSION`:$LIBVIR_MICRO_VERSION:$LIBVIR_MINOR_VERSION
+LIBVIRT_MAJOR_VERSION=0
+LIBVIRT_MINOR_VERSION=0
+LIBVIRT_MICRO_VERSION=4
+LIBVIRT_MICRO_VERSION_SUFFIX=
+LIBVIRT_VERSION=$LIBVIRT_MAJOR_VERSION.$LIBVIRT_MINOR_VERSION.$LIBVIRT_MICRO_VERSION$LIBVIRT_MICRO_VERSION_SUFFIX
+LIBVIRT_VERSION_INFO=`expr $LIBVIRT_MAJOR_VERSION + $LIBVIRT_MINOR_VERSION`:$LIBVIRT_MICRO_VERSION:$LIBVIRT_MINOR_VERSION
 
-LIBVIR_VERSION_NUMBER=`expr $LIBVIR_MAJOR_VERSION \* 1000000 + $LIBVIR_MINOR_VERSION \* 1000 + $LIBVIR_MICRO_VERSION`
+LIBVIRT_VERSION_NUMBER=`expr $LIBVIRT_MAJOR_VERSION \* 1000000 + $LIBVIRT_MINOR_VERSION \* 1000 + $LIBVIRT_MICRO_VERSION`
 
 if test -f CVS/Entries; then
   extra=`grep ChangeLog CVS/Entries | grep -v LIBVIR | sed -e s\%/ChangeLog/1\.%% -e s\%/.*$%%`
   echo extra=$extra
   if test "$extra" != ""
   then
-      LIBVIR_VERSION_EXTRA="-CVS$extra"
+      LIBVIRT_VERSION_EXTRA="-CVS$extra"
   fi
 fi
 
-AC_SUBST(LIBVIR_MAJOR_VERSION)
-AC_SUBST(LIBVIR_MINOR_VERSION)
-AC_SUBST(LIBVIR_MICRO_VERSION)
-AC_SUBST(LIBVIR_VERSION)
-AC_SUBST(LIBVIR_VERSION_INFO)
-AC_SUBST(LIBVIR_VERSION_NUMBER)
-AC_SUBST(LIBVIR_VERSION_EXTRA)
+AC_SUBST(LIBVIRT_MAJOR_VERSION)
+AC_SUBST(LIBVIRT_MINOR_VERSION)
+AC_SUBST(LIBVIRT_MICRO_VERSION)
+AC_SUBST(LIBVIRT_VERSION)
+AC_SUBST(LIBVIRT_VERSION_INFO)
+AC_SUBST(LIBVIRT_VERSION_NUMBER)
+AC_SUBST(LIBVIRT_VERSION_EXTRA)
 
-VERSION=${LIBVIR_VERSION}
+VERSION=${LIBVIRT_VERSION}
 
 AM_INIT_AUTOMAKE(libvirt, $VERSION)
 
