* TODO: updated * include/libvirt.h include/libvirt.h.in: cleanup * src/libvirt.c: remove debugging output * src/xend_internal.c src/xml.c src/xml.h: reimplement   virDomainGetXMLDesc() based on xend interface, now work as user too. Daniel

--- a/include/libvirt.h.in
+++ b/include/libvirt.h.in
@@ -242,7 +242,8 @@ int			virDomainSetMaxMemory	(virDomainPtr domain,
 /*
  * XML domain description
  */
-char *			virDomainGetXMLDesc	(virDomainPtr domain, int flags);
+char *			virDomainGetXMLDesc	(virDomainPtr domain,
+						 int flags);
 
 #ifdef __cplusplus
 }
