* src/libvirt.c src/xend_internal.c src/xend_internal.h: move the   XML dump function around to make sure all entry points are centralized   in libvirt.c and also avoid doc generation troubles. * docs/examples/Makefile.am docs/examples/index.py: fix the makefile   a bit. * TODO: updated * docs/format.html: added a description of the XML used for the   domains. * docs//*: rebuilt Daniel

--- a/docs/examples/Makefile.am
+++ b/docs/examples/Makefile.am
@@ -8,8 +8,8 @@ rebuild: examples.xml index.html
 examples.xml: index.py *.c
 	-@($(srcdir)/index.py)
 
-index.html: examples.xml examples.xsl
-	-@(xsltproc examples.xsl examples.xml && echo "Rebuilt web page" && xmllint --valid --noout index.html)
+index.html: examples.xml examples.xsl $(top_srcdir)/docs/site.xsl
+	-@(if [ -x $(XSLTPROC) ] ; then 	   $(XSLTPROC) examples.xsl examples.xml && echo "Rebuilt web page" && xmllint --valid --noout index.html ; fi)
 
 install-data-local: 
 	$(mkinstalldirs) $(DESTDIR)$(HTML_DIR)
