* TODO: updated * python/tests/Makefile.am: fix a small PYTHONPATH bug * docs//*: fixed the xsl a bit for toc names, added doc for   the python bindings, regenerated Daniel

--- a/python/tests/Makefile.am
+++ b/python/tests/Makefile.am
@@ -8,7 +8,7 @@ EXTRA_DIST = $(PYTESTS)
 if WITH_PYTHON
 tests: $(PYTESTS)
 	@echo "## running Python regression tests"
-	-@(PYTHONPATH="..:../src/.libs:$(srcdir)/../src:$$PYTHONPATH" ; \
+	-@(PYTHONPATH="..:../.libs:../src/.libs:$(srcdir)/../src:$$PYTHONPATH";\
 	   export PYTHONPATH; \
 	   LD_LIBRARY_PATH="$(top_builddir)/src/.libs:$$LD_LIBRARY_PATH" ; \
 	   export LD_LIBRARY_PATH; \
