* Makefile.am: extended make tests to run those in docs/examples * docs/examples/suspend.c docs/examples/*: added an example of   suspend/resume and regenerated Daniel

--- a/Makefile.am
+++ b/Makefile.am
@@ -15,6 +15,7 @@ rpm: clean
 check-local: all tests
 
 tests:
+	@(cd docs/examples ; $(MAKE) MAKEFLAGS+=--silent tests)
 	@(if [ "@PYTHON_SUBDIR@" != "" ] ; then cd python ; \
 	  $(MAKE) MAKEFLAGS+=--silent tests ; fi)
 	
