--- a/include/libvirt/libvirt.h.in
+++ b/include/libvirt/libvirt.h.in
@@ -207,7 +207,7 @@ virDomainPtr		virDomainLookupByName	(virConnectPtr conn,
 virDomainPtr		virDomainLookupByID	(virConnectPtr conn,
 						 int id);
 virDomainPtr		virDomainLookupByUUID	(virConnectPtr conn,
-						 const char *uuid);
+						 const unsigned char *uuid);
 int			virDomainShutdown	(virDomainPtr domain);
 int			virDomainDestroy	(virDomainPtr domain);
 int			virDomainFree		(virDomainPtr domain);
@@ -238,7 +238,7 @@ int			virDomainGetInfo	(virDomainPtr domain,
 const char *		virDomainGetName	(virDomainPtr domain);
 unsigned int		virDomainGetID		(virDomainPtr domain);
 int			virDomainGetUUID	(virDomainPtr domain,
-						 char *uuid);
+						 unsigned char *uuid);
 char *			virDomainGetOSType	(virDomainPtr domain);
 unsigned long		virDomainGetMaxMemory	(virDomainPtr domain);
 int			virDomainSetMaxMemory	(virDomainPtr domain,
