* src/libvirt.c: fixing a bug before the release of 0.0.5 * python/generator.py python/libvir.c python/libvirt-python-api.xml:   also fixing the binding for getting a domain UUID * python/tests/Makefile.am python/tests/uuid.py: added a test   for the new UUID API Daniel

--- a/python/tests/Makefile.am
+++ b/python/tests/Makefile.am
@@ -2,7 +2,8 @@ EXAMPLE_DIR = $(datadir)/doc/libvirt-python-$(LIBVIRT_VERSION)/examples
 
 PYTESTS=		\
 	basic.py	\
-	create.py
+	create.py	\
+	uuid.py
 
 EXTRA_DIST = $(PYTESTS)
 
