* src/Makefile.am src/internal.h src/libvirt.c src/libvirt_sym.version   src/virterror.c include/Makefile.am include/virterror.h: adding   the public APIs for errors, callbacks and synchronous. The boring   stuff is still left to do, plugging it. Also need to be exposed   at the python level. * doc//*: rebuilt Daniel

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -2,7 +2,8 @@
 
 virincdir = $(includedir)/libvirt
 
-virinc_HEADERS = libvirt.h
+virinc_HEADERS = libvirt.h		\
+		 virterror.h
 
 install-exec-hook:
 	$(mkinstalldirs) $(DESTDIR)$(virincdir)
