--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -14,10 +14,11 @@ libvirt_la_LDFLAGS = -Wl,--version-script=$(srcdir)/libvirt_sym.version \
 libvirt_la_SOURCES =						\
 		libvirt.c internal.h				\
 		hash.c hash.h					\
-		xml.c xml.h						\
+		xml.c xml.h					\
 		xen_internal.c xen_internal.h			\
 		xend_internal.c xend_internal.h			\
-		sexpr.c sexpr.h
+		sexpr.c sexpr.h					\
+		virterror.c
 
 bin_PROGRAMS=virsh
 
