--- a/python/tests/Makefile.am
+++ b/python/tests/Makefile.am
@@ -3,7 +3,8 @@ EXAMPLE_DIR = $(datadir)/doc/libvirt-python-$(LIBVIRT_VERSION)/examples
 PYTESTS=		\
 	basic.py	\
 	create.py	\
-	uuid.py
+	uuid.py		\
+	error.py
 
 EXTRA_DIST = $(PYTESTS)
 
