* src/xs_internal.c src/xs_internal.h include/virterror.h   src/virterror.c: created a new module related to Xen Store accesses * src/libvirt.c src/xen_internal.[ch] src/xend_internal.[ch]:   nearly completed the separation of the code from the different modules Daniel

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,6 +16,7 @@ libvirt_la_SOURCES =						\
 		hash.c hash.h					\
 		xml.c xml.h					\
 		xen_internal.c xen_internal.h			\
+		xs_internal.c xs_internal.h			\
 		xend_internal.c xend_internal.h			\
 		sexpr.c sexpr.h					\
 		virterror.c
