* src/Makefile.am: add  driver.h to SOURCES as pointed by Jim Meyering * doc/*: rebuilt Daniel

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -19,7 +19,8 @@ libvirt_la_SOURCES =						\
 		xs_internal.c xs_internal.h			\
 		xend_internal.c xend_internal.h			\
 		sexpr.c sexpr.h					\
-		virterror.c
+		virterror.c					\
+		driver.h
 
 bin_PROGRAMS=virsh
 
