* NEWS configure.in libvirt.spec.in docs/*: documented and   regenerated for release of 0.1.0 * Makefile.am virsh.1: added man page from Andrew Puch Daniel

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,9 @@ SUBDIRS = src include docs @PYTHON_SUBDIR@
 
 EXTRA_DIST = libvirt.spec.in libvirt.spec COPYING.LIB \
              libvirt.pc.in libvirt.pc TODO AUTHORS ChangeLog \
-	     NEWS README 
+	     NEWS README $(man_MANS)
+
+man_MANS = virsh.1
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libvirt.pc
