--- a/docs/examples/Makefile.am
+++ b/docs/examples/Makefile.am
@@ -18,24 +18,24 @@ install-data-local:
 
 EXTRA_DIST=examples.xsl index.py examples.xml 
 
-noinst_PROGRAMS=info1 suspend 
-
-info1_SOURCES=info1.c
-info1_LDFLAGS=
-info1_DEPENDENCIES= $(DEPS)
-info1_LDADD= $(LDADDS)
+noinst_PROGRAMS=suspend info1 
 
 suspend_SOURCES=suspend.c
 suspend_LDFLAGS=
 suspend_DEPENDENCIES= $(DEPS)
 suspend_LDADD= $(LDADDS)
 
+info1_SOURCES=info1.c
+info1_LDFLAGS=
+info1_DEPENDENCIES= $(DEPS)
+info1_LDADD= $(LDADDS)
+
 valgrind: 
 	$(MAKE) CHECKER='valgrind' tests
 
 tests: $(noinst_PROGRAMS)
 	@(echo '## examples regression tests')
-	@($(CHECKER) ./info1)
 	@($(CHECKER) ./suspend)
+	@($(CHECKER) ./info1)
 
 
