* NEWS libvirt.spec.in docs/*: preparing release of 0.1.1 Daniel

--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -103,6 +103,15 @@ rm -fr %{buildroot}
 %doc docs/examples/python
 
 %changelog
+* Wed Jun 21 2006 Daniel Veillard <veillard@redhat.com> 0.1.1-1
+- extend and cleanup the driver infrastructure and code
+- python examples
+- extend uuid support
+- bug fixes, buffer handling cleanups
+- support for new Xen hypervisor API
+- test driver for unit testing
+- virsh --conect argument
+
 * Mon Apr 10 2006 Daniel Veillard <veillard@redhat.com> 0.1.0-1
 - various fixes
 - new APIs: for Node information and Reboot
