* configure.in libvirt.spec.in docs/examples/* include/Makefile.am   include/libvirt/virterror.h python/generator.py python/libvir.c   python/libvirt_wrap.h src/driver.h src/internal.h src/test.h   src/virsh.c src/virterror.c src/xend_internal.c src/xend_internal.h   src/xml.c src/xml.h: moved the includes from include/ to   include/libvirt to reflect the installed include tree. This   avoid using "" in the includes themselves. Daniel

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -46,7 +46,7 @@ $(srcdir)/html/index.html: libvirt-api.xml $(srcdir)/newapi.xsl
 	  echo "Validating the resulting XHTML pages" ; \
 	  $(XMLLINT) --nonet --valid --noout html/*.html ; fi );
 
-libvirt-api.xml libvirt-refs.xml: apibuild.py ../include/*.h ../src/*.h ../src/*.c
+libvirt-api.xml libvirt-refs.xml: apibuild.py ../include/libvirt/*.h ../src/*.h ../src/*.c
 	-(./apibuild.py)
 
 $(top_builddir)/NEWS: $(top_srcdir)/docs/news.xsl $(top_srcdir)/docs/news.html
