--- a/configure.in
+++ b/configure.in
@@ -253,6 +253,7 @@ cp COPYING.LIB COPYING
 AC_OUTPUT(Makefile src/Makefile include/Makefile docs/Makefile \
           docs/examples/Makefile docs/devhelp/Makefile \
 	  docs/examples/python/Makefile \
-          libvirt.pc libvirt.spec include/libvirt.h \
+          libvirt.pc libvirt.spec \
+	  include/libvirt/Makefile include/libvirt/libvirt.h \
 	  python/Makefile python/tests/Makefile \
           tests/Makefile)
